objects/Email_Blast__c.object
<CustomObject>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Program__c</fullName>
        <label>Marketing Program</label>
        <referenceTo>Marketing_Activity__c</referenceTo>
        <relationshipLabel>Email Blasts</relationshipLabel>
        <relationshipName>Email_Blasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Date_and_Time__c</fullName>
        <label>Send Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andean</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
                <value>
                    <fullName>ECEME</fullName>
                </value>
                <value>
                    <fullName>France, North Africa</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Northern Europe</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>SE Africa</fullName>
                </value>
                <value>
                    <fullName>South East Asia</fullName>
                </value>
                <value>
                    <fullName>Southern Cone</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain, Iberia</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>UK,Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email Blast</label>
    <nameField>
        <label>Email Blast</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Blasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>